# Lustre-Realm

./: .gitignore  .replit  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
attached_assets/: Pasted-Project-Overview-Create-a-complete-e-commerce-website-for-selling-ornaments-bangles-anklets-brace-1757761660499_1757761660501.txt
cart/: admin.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
cart/templatetags/: cart_filters.py
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_billing_address_order_payment_method_and_more.py
ornaments_store/: asgi.py  settings.py  urls.py  wsgi.py
products/: admin.py  models.py  urls.py  views.py
products/management/commands/: populate_products.py
products/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: login.html  profile.html  profile_edit.html  register.html
templates/cart/: cart.html
templates/core/: about.html  contact.html  home.html  privacy.html  services.html  shipping.html  terms.html
templates/orders/: checkout.html  order_confirmation.html  order_detail.html  order_history.html
templates/products/: product_detail.html  product_list.html
