[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django-crispy-forms>=2.4",
    "django>=4.0,<5.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "razorpay>=1.4.2",
]
